--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "core-js": "^2.5.4",
     "ngx-toastr": "^10.0.4",
     "node-sass": "^4.13.0",
+    "roboto-fontface": "^0.10.0",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
